# simon_thesis_ws

./: README.md
bagfiles/Ekf/f1/: data.txt  ekf.csv  odom.csv
bagfiles/Ekf/f2/: data.txt  ekf.csv
bagfiles/Ekf/f3/: data.txt  ekf.csv  odom.csv
bagfiles/Ekf/f4/: ekf.csv  odom.csv
bagfiles/Mapping/: README.txt
bagfiles/amcl_MRLArena/: Global_planner.m  Global_planner.txt  amcl_pose.fig  amcl_pose.txt  amcl_pose_point_five.xlsx  entropy.csv  global_plan_point_five.xlsx  local_plan_point_five.xlsx  odo_amcl_reference.fig  odom_point_five.txt  odom_point_five.xlsx  odom_three.txt  trajectory_comparison.m
bagfiles/amcl_localization/: README.txt  pose_amcl_graphmap.csv
bagfiles/gmapping_base/: gmapping_bad.yaml  gmapping_good.yaml  gmapping_pointfive.yaml
bagfiles/gmapping_default_and_speedfour/: gmapping_def_speed4.yaml
bagfiles/gmapping_lskip_particle5/: gmapping_lskip_particle5.yaml  gmapping_lskip_window_particle5.pgm
bagfiles/gmapping_motionnoise/: gmapping_motionnoise.yaml
bagfiles/gmapping_particles/: README.txt  gmapping_particle5.yaml  gmapping_particle50.yaml
bagfiles/gmapping_threshold_and_particleThreshold/: gmapping_p50th01.yaml  gmapping_p5th01.yaml  gmapping_p5th1.yaml  gmapping_resThreshold.yaml
bagfiles/gmapping_tuned/: USING THE BAG FILES TO GENERATE MAPS steps.txt  gmapping_particles5.yaml  results.txt
bagfiles/graph_localization/: README.txt  pose_graphlocalizer_graphmap.csv
bagfiles/graphmapping_default/: README.txt  grap_lessparti_range80.pgm  grap_lessparti_range80.yaml  grap_lessparticles.pgm  grap_lessparticles.yaml  graph_fabric_default.pgm  graph_fabric_default.yaml  graph_fabrichalle.yaml  graph_p10p50.yaml  graph_p10p50range110.pgm  graph_p10p50range110.yaml  graph_p10p50range60.pgm  graph_p10p50range90.pgm  graph_p1800p2000range90.pgm  graph_p1800p2000range90.yaml  graph_p200p300range90.pgm  graph_p250p350range90.pgm  graph_p250p350range90.yaml  graph_p300p400range90.pgm  graph_p400p500range90.yaml  graph_p40p80range90.pgm  graph_p500_th60.pgm  graph_p500_th60.yaml  graph_p500p700range90.yaml  graph_p5p10range90.pgm  graph_p900p1000range90.pgm  results.txt
bagfiles/karto_tuned/: graph_fabrichalle.pgm  graph_p10p50range10.pgm  graph_p10p50range10.yaml  graph_p10p50range30.pgm  graph_p200p300range90.yaml  graph_p20p60range90.yaml  graph_p300p400range90.yaml  graph_p400p500range90.pgm  graph_p40p80range90.yaml  graph_p500p700range90.pgm  graph_p900p1000range90.yaml
devel/: .catkin  .rosinstall  setup.sh
guide/qtcreator/: qtcreator.aux  qtcreator.tex
plan/: Progress Planning October November.xlsx
src/: CMakeLists.txt
src/costmap_converter/: CMakeLists.txt
src/data_converter/: CMakeLists.txt  package.xml
src/globalplanner/: CMakeLists.txt  globalplanner.files  globalplanner.includes  globalplanner_plugin.xml
src/globalplanner/include/globalplanner/: globalplanner.h
src/globalplanner/src/: globalplanner.cpp
src/learning_tf/: CMakeLists.txt
src/map_groundtruth/: CMakeLists.txt  package.xml  readme.txt
src/robot_localization_cust/: CMakeLists.txt
src/robot_setup_tf/: CMakeLists.txt
src/simple_navigation_goals/: .cproject  .project  CMakeLists.txt  simple_navigation_goals.files
src/simple_navigation_goals/src/: simple_navigation_goals.cpp
src/tf_config/: CMakeLists.txt  package.xml
src/tf_config/src/: support.cpp  tf_broadcaster.cpp  tf_broadcaster_car.cpp  tf_broadcaster_husky.cpp  tf_broadcaster_world.cpp  tf_husky_dynamic.cpp  tf_listener.cpp  tf_listener_husky.cpp
src/using_markers/: CMakeLists.txt  package.xml
updates/: README.txt
updates/01_07_2018_updates/: tuningAmcl.aux  tuningAmcl.tex
updates/08_16_updates/: updates.aux  updates.tex
updates/09_08_updates/: updates.aux  updates.tex
updates/10_04_updates/: table.aux  table.tex  updates.aux  updates.tex  updates_jonas.aux  updates_jonas.tex
updates/10_09_updates/: updates.aux  updates.tex
updates/10_16_updates/: updates.aux  updates.tex
updates/11_27_updates/: tuning_karto.aux  tuning_karto.tex
updates/12_11_updates/: KartoSLAM_tuning.aux  KartoSLAM_tuning.tex  updates.aux  updates.dvi  updates.tex  updates_ion.tex  updates_me.aux  updates_me.tex
updates/12_20_updates/: ar_tracking.aux  ar_tracking.tex  updates.aux  updates.tex
updates/Ekf_tags/: ekf.aux  ekf.tex
(+1171 files in other folders)
